Refactor cards section in index.html

--- a/index.html
+++ b/index.html
@@ -60,35 +60,12 @@
 
 
     </section>
-    <cards>
+    <div>
 
         <!--cards1-->
-        <section class="text-white bg-black body-font overflow-hidden">
-            <div class="container px-5 py-24 mx-auto">
-                <div class="lg:w-4/5 mx-auto flex flex-wrap">
-
-                    <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0 text-center ">
-                        <div class="info mx-auto">
-                            <div class="mb-6"></div>
-                            <div class="w-20 h-20 rounded-full inline-flex items-center justify-center   mb-3">
-                                <img src="./assets/logo/Pixonoids - Material UI.png" alt="image" class="characterimg">
-                            </div>
-
-                            <h1 class="text-white text-3xl title-font font-medium mb-4">
-                                Name </h1>
-                            <h2 class="text-sm title-font  tracking-widest mb-4">Department Name</h2>
-
-                            <p class="leading-relaxed mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Deleniti, suscipit quas deserunt molestiae libero, vitae itaque vero incidunt omnis
-                                explicabo illo id minus temporibus consequatur?</p>
-                        </div>
-
-                    </div>
-                    <img alt="characterimg" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded"
-                        src="https://dummyimage.com/400x400">
-                </div>
-            </div>
-        </section>
+        <div class="card">
+            
+        </div>
 
 
 
@@ -99,7 +76,7 @@
 
 
 
-    </cards>
+    </div>
     <footer>
         <!-- this is sample footer -->
 
