Update card layout in index.html

--- a/index.html
+++ b/index.html
@@ -63,8 +63,14 @@
     <div>
 
         <!--cards1-->
-        <div class="card">
-            
+        <div class="card h-screen">
+            <div class="info">
+
+            </div>
+            <div class="charimg">
+                
+            </div>
+
         </div>
 
 
