Add styling for hover button and scrollbar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="main h-screen">
             <h1 class="pixotitle">PIXONOIDS</h1>
             <h1 class="farewelltext">Farewell-2023</h1>
+            <div class="btnmain">
+                <a href="/" class="bn5">Hover</a>
+            </div>
 
         </div>
     </main>
@@ -65,10 +68,31 @@
         <!--cards1-->
         <div class="card h-screen">
             <div class="info">
+                <div class="infocard">
+                    <div class="h-20 w-full bg-black flex">
+                        <div class="w-20 ">
+                            <img src="./assets/logo/Pixonoids - Material UI.png" alt="">
+                        </div>
+                        <div>
+                            <div class="h-1/2"></div>
+                            <div class="h-1/2 dept">
+                                <div className="bn40div">
+                                    <a class="bn40" href="/">Button</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
 
             </div>
             <div class="charimg">
-                
+                <div class="image">
+
+                </div>
+
             </div>
 
         </div>
