Refactor CSS styles and update HTML structure Fix formatting and remove unnecessary code Update class names and add missing elements Improve responsiveness and optimize animations Remove unused imports and fix typos Update comments and add missing closing tags Fix SVG curve and update footer Update card styles and main title Organize CSS files and remove redundant code Update message section and card content styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,10 +15,9 @@
     <link rel="stylesheet" href="global.css">
     <!--tailwind  -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!--trig js import track the scroll -->
+    <!--trig.js import track the scroll -->
     <script src="https://cdn.jsdelivr.net/npm/trig-js/src/trig.min.js"></script>
 </head>
-
 <body>
     <nav class="navbar">
         <!-- this is sample navbar -->
@@ -28,17 +26,12 @@
             <span>PIXONOIDS FAREWELL 2023</span>
         </div>
     </nav>
-
     <main>
         <div class="main h-screen">
             <h1 class="pixotitle">PIXONOIDS</h1>
             <h1 class="farewelltext">Farewell-2023</h1>
-
-
         </div>
     </main>
-
-
     <!-- Video Section -->
     <!--
     <div class="video h-screen bg-red-300">
@@ -47,10 +40,6 @@
     </div>-->
     <!-- Messages Section -->
     <section class="messages-section h-screen">
-
-
-
-
         <section class=" body-font message">
             <div class="container px-5 py-24 mx-auto">
                 <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
@@ -63,20 +52,11 @@
                     <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
                         earum molestiae dolorum ab. Molestias maxime at nam facilis necessitatibus explicabo commodi
                         officia ipsum aut? Minus.</p>
-
                 </div>
             </div>
         </section>
-
-
-
-
-
-
-
     </section>
     <div>
-
         <!--cards odd-->
         <div class="cardparent h-screen ">
             <div class="info aniodd " data-trig>
@@ -90,8 +70,6 @@
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, corporis?
                                 </p>
                                 <div class="flex mt-3">
-
-
                                     <a class=" text-gray-400">
                                         <svg fill="none" stroke="currentColor" stroke-linecap="round"
                                             stroke-linejoin="round" stroke-width="2" class="w-[18px] h-[18px]"
@@ -111,22 +89,16 @@
                                         </svg>
                                     </a>
                                 </div>
-
                             </div>
                             <div class="img-box">
-
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
             </div>
             <div class="charimg">
                 <div class="image card1 ani2 " data-trig>
                     <img class="" src="https://dummyimage.com/600x600" alt="image">
-
                 </div>
 
             </div>
@@ -241,15 +213,9 @@
             <div class="charimg">
                 <div class="image card1 ani2 " data-trig>
                     <img class="" src="https://dummyimage.com/600x600" alt="image">
-
                 </div>
-
             </div>
-
         </div>
-
-
-
         <!--cards even-->
         <div class="cardparent h-screen ">
 
@@ -305,24 +271,15 @@
 
             </div>
         </div>
-
-
-
-
-
-
     </div>
-
     <!--SVG curve -->
     <div class="custom-shape-divider-bottom-1704973730">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
             <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
         </svg>
     </div>
-
     <footer>
         <!-- this is sample footer -->
-
         <footer class="text-white body-font">
             <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
                 <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
@@ -368,7 +325,5 @@
             </div>
         </footer>
     </footer>
-
 </body>
-
 </html>
