Remove unused CSS styles and fix formatting in global.css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/cards.css">
     <link rel="stylesheet" href="./styles/video.css">
+    <link rel="stylesheet" href="./styles/svg.css">
     <link rel="stylesheet" href="global.css">
     <!--tailwind  -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -295,8 +296,19 @@
 
                 <div class="message-text-section">
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo minima numquam atque a possimus
-                        deserunt quis, nam qui, recusandae mollitia quisquam ad! Corrupti, vel molestias?
+                        <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                class="inline-block w-8 h-8 text-gray-500 mb-8" viewBox="0 0 975.036 975.036">
+                                <path
+                                    d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
+                                </path>
+                            </svg>
+                            <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Aliquam
+                                earum molestiae dolorum ab. Molestias maxime at nam facilis necessitatibus explicabo
+                                commodi
+                                officia ipsum aut? Minus.</p>
+                        </div>
                     </div>
 
 
@@ -546,8 +558,19 @@
 
                 <div class="message-text-section">
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo minima numquam atque a possimus
-                        deserunt quis, nam qui, recusandae mollitia quisquam ad! Corrupti, vel molestias?
+                        <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                class="inline-block w-8 h-8 text-gray-500 mb-8" viewBox="0 0 975.036 975.036">
+                                <path
+                                    d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
+                                </path>
+                            </svg>
+                            <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Aliquam
+                                earum molestiae dolorum ab. Molestias maxime at nam facilis necessitatibus explicabo
+                                commodi
+                                officia ipsum aut? Minus.</p>
+                        </div>
                     </div>
 
 
@@ -797,8 +820,19 @@
 
                 <div class="message-text-section">
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo minima numquam atque a possimus
-                        deserunt quis, nam qui, recusandae mollitia quisquam ad! Corrupti, vel molestias?
+                        <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                class="inline-block w-8 h-8 text-gray-500 mb-8" viewBox="0 0 975.036 975.036">
+                                <path
+                                    d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
+                                </path>
+                            </svg>
+                            <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Aliquam
+                                earum molestiae dolorum ab. Molestias maxime at nam facilis necessitatibus explicabo
+                                commodi
+                                officia ipsum aut? Minus.</p>
+                        </div>
                     </div>
 
 
@@ -1048,8 +1082,19 @@
 
                 <div class="message-text-section">
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo minima numquam atque a possimus
-                        deserunt quis, nam qui, recusandae mollitia quisquam ad! Corrupti, vel molestias?
+                        <div class="xl:w-1/2 lg:w-3/4 w-full mx-auto text-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                class="inline-block w-8 h-8 text-gray-500 mb-8" viewBox="0 0 975.036 975.036">
+                                <path
+                                    d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z">
+                                </path>
+                            </svg>
+                            <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Aliquam
+                                earum molestiae dolorum ab. Molestias maxime at nam facilis necessitatibus explicabo
+                                commodi
+                                officia ipsum aut? Minus.</p>
+                        </div>
                     </div>
 
 
@@ -1287,74 +1332,18 @@
 
 
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!--SVG curve -->
-    <div class="custom-shape-divider-bottom-1704973730">
-        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path
-                d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
-                class="shape-fill"></path>
-        </svg>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <footer>
+    <div class="footer">
+        <!--SVG curve -->
+        <div class="custom-shape-divider-bottom-1704973730">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
         <!-- this is sample footer -->
         <footer class="text-white body-font">
             <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
@@ -1400,7 +1389,7 @@
                 </span>
             </div>
         </footer>
-    </footer>
+    </div>
 </body>
 
 </html>
