Add image slideshow to index.html

--- a/index.html
+++ b/index.html
@@ -1315,6 +1315,13 @@
         </div>
     </div>
 
+    <div class=" w-full imgbox">
+        <div class="imgelement w-full h-full"></div>
+     
+    
+
+    </div>
+
 
     <div class="footer">
         <!--SVG curve -->
