Update video section height in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 
     <!-- video Section -->
-    <section class="video-section h-screen" id="video">
+    <section class="video-section " id="video">
 
     </section>
     <a href="#main">
