Add "About the theme" popup to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             <li><a href="#video">Video</a></li>
             <li><a href="#img">Images</a></li>
             <li><a href="#character">Characters</a></li>
+            <li><a href="#message">Message</a></li>
+            <li>
+                <a href="#popup1">
+                    <button
+                        class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">About
+                        the theme
+
+                    </button></a>
+            </li>
         </ul>
         <div class="navbar-toggle">
             <div class="tog">
@@ -53,13 +62,18 @@
 
 
 
-
+    <!--CSS MAIN.CSS-->
     <div id="popup1" class="overlay">
         <div class="popup">
-            <h2>Here i am</h2>
-            <a class="close" href="#">&times;</a>
+            <div class="popupheader">
+                <h2>About the theme</h2>
+                <a class="close" href="#">&times;</a>
+            </div>
             <div class="content">
-                Thank to pop me out of that button, but now i'm done so you can close this window.
+                <div>
+                <h1>TEKKEN</h1>
+               
+                <p>Tekken is a Japanese fighting game franchise that includes film and print adaptations. The name translates to "Iron Fist".  </p></div>
             </div>
         </div>
     </div>
