Add font imports and update navbar logo path

--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
     <link rel="stylesheet" href="./styles/cards.css">
     <link rel="stylesheet" href="./styles/svg.css">
     <link rel="stylesheet" href="global.css">
-    <!--tailwind  -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!--trig.js import track the scroll -->
-    <script src="https://cdn.jsdelivr.net/npm/trig-js/src/trig.min.js"></script>
 
 
 </head>
 
 <body>
     <nav class="navbar">
-        <div class="navbar-logo"><img src="../assets/logo/Pixonoids - Material UI.png"></div>
+        <div class="navbar-logo"><img src="./assets/logo/Pixonoids - Material UI.png"></div>
         <ul class="navbar-links">
             <li><a href="#video">Video</a></li>
             <li><a href="#img">Images</a></li>
@@ -1486,6 +1482,11 @@
         </footer>
     </div>
     <script src="js/main.js"></script>
+    
+    <!--tailwind  -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!--trig.js import track the scroll -->
+    <script src="https://cdn.jsdelivr.net/npm/trig-js/src/trig.min.js"></script>
 </body>
 
 
